--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="primary_grey">#333333</color>
     <color name="secondary_grey">#545454</color>
     <color name="semitrans_green">#90e6</color>
-    <color name="progresswheel_rim">#e9e9e9</color>
+    <color name="white_back_pressed">#dbd7d7</color>
     <color name="white_back">#f6f5f5</color>
     <color name="interval_green">#2ecc71</color>
     <color name="interval_green_pressed">#27ae60</color>
