--- a/res/layout/list_plan_row.xml
+++ b/res/layout/list_plan_row.xml
@@ -12,9 +12,10 @@
 
 
     <!--<LinearLayout android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">-->
-        <TextView android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight" android:id="@+id/topText" android:textSize="@dimen/medium_text" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold"/>
+        <TextView android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight" android:id="@+id/topText" android:textSize="@dimen/medium_text" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold"
+                  android:singleLine="true" android:ellipsize="end"/>
         <TextView android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight" android:id="@+id/bottomText" android:textStyle="italic" android:textColor="@color/secondary_grey"  android:layout_width="wrap_content"
-                  android:layout_below="@id/topText" android:layout_height="wrap_content" />
+                  android:singleLine="true" android:ellipsize="end" android:layout_below="@id/topText" android:layout_height="wrap_content" />
     <!--</LinearLayout>-->
 
     <TextView android:layout_width="wrap_content"
