--- a/res/layout/activity_view_intervals.xml
+++ b/res/layout/activity_view_intervals.xml
@@ -2,53 +2,49 @@
 
     <ViewFlipper
             xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res/com.kostas.onlineHelp"
             android:layout_width="fill_parent"
-
             android:layout_height="fill_parent"
             android:id="@+id/viewFlipperIntervals"
-
             android:layout_above="@+id/buttonNewRun"
-
             android:background="@color/primary_grey"
             >
 
-
-    <RelativeLayout  android:layout_width="fill_parent" android:layout_height="fill_parent">
-
+    <LinearLayout  android:orientation="vertical"  android:layout_width="fill_parent" android:layout_height="fill_parent">
 
         <ListView
                 android:id="@+id/listIntervals"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_above="@+id/buttonShareFriends"
-
+                android:layout_height="@dimen/zero"
+                android:layout_weight="4"
                 />
 
-        <Button style="@style/buttonStyle"
-                android:layout_margin="@dimen/ten_device_pixels"
-                android:layout_above="@+id/buttonShowMap"
-                android:text="Share with Friends"
+    <LinearLayout  android:orientation="horizontal"
+                   android:layout_width="fill_parent"
+                   android:layout_height="0dp"
+                   android:layout_weight="1">
+
+        <Button style="@style/buttonStyle2"
+                android:layout_weight="1"
+                android:text="@string/share"
                 android:background="@drawable/share_button_selector"
-                android:id="@+id/buttonShareFriends"
-                android:layout_alignParentTop="true"
+                android:id="@+id/buttonShareFriends"/>
 
-                />
-
-
-        <Button android:text="@string/map"
-                android:textSize="@dimen/xmedium_text"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="@dimen/ten_device_pixels"
-                android:textColor="@color/white_back" android:textStyle="bold"
+        <Button style="@style/buttonStyle2"
+                android:text="@string/map"
+                android:layout_weight="1"
                 android:id="@+id/buttonShowMap"
                 android:background="@drawable/plus_minus_selector"
-                android:layout_width="fill_parent"
-                android:layout_height="@dimen/standard_view_height"/>
+               />
 
+        <Button style="@style/buttonStyle2"
+                android:layout_weight="1"
+                android:text="@string/close"
+                android:id="@+id/buttonCloseIntervals"
+                android:background="@drawable/close_button_selector"/>
 
-    </RelativeLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <com.kostas.custom.MapWrapperLayout
@@ -58,17 +54,12 @@
 
         <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-
-                >
+                android:layout_height="match_parent">
             <fragment
                     android:id="@+id/mapListKostas"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-
-                    />
+                    android:layout_height="match_parent"/>
 
             <ImageButton
                     android:layout_margin="15dp"
@@ -83,7 +74,5 @@
         </FrameLayout>
 
     </com.kostas.custom.MapWrapperLayout>
-
-
 
 </ViewFlipper>
