--- a/res/layout/frg_friends.xml
+++ b/res/layout/frg_friends.xml
@@ -61,7 +61,7 @@
                       android:orientation="vertical">
 
             <ListView
-                    android:id="@+id/listFriendRuns"
+                    android:id="@+id/listFriendsWithRuns"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     />
@@ -82,6 +82,19 @@
 
 
         </LinearLayout>
+
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:orientation="vertical">
+
+            <ListView
+                    android:id="@+id/listFriendRuns"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    />
+
+        </LinearLayout>
+
+
 
 
     </ViewFlipper>
