--- a/res/layout/frg_friends.xml
+++ b/res/layout/frg_friends.xml
@@ -92,6 +92,15 @@
                     android:layout_height="wrap_content"
                     />
 
+            <Button style="@style/buttonStyle"
+                    android:textSize="@dimen/large_text"
+                    android:text="Back to friends"
+                    android:background="@drawable/close_button_selector"
+                    android:id="@+id/buttonBackToFriendsList"
+                    android:layout_marginTop="@dimen/ten_device_pixels"
+                    android:layout_marginBottom="@dimen/twenty"
+                    />
+
         </LinearLayout>
 
 
